style.css
@font-face {
    font-family: "San Francisco Regular";
    font-style: normal;
    font-weight: bold;
    src: url('./fonts/SF-Pro-Display-Regular.otf') format("opentype");
  }
  
@font-face {
    font-family: "San Francisco Thin";
    font-style: normal;
    font-weight: bold;
    src: url('./fonts/SF-Pro-Display-Thin.otf') format("opentype");
}

/* Default variables */
:root {
--blue-color: blue;
--green-color: green;
}

[data-theme^="light"],
[data-theme] [data-theme^="light"] {
    background-color: #fff;
}

[data-theme^="dark"],
[data-theme] [data-theme^="dark"] {
    background-color: hsla(150, 50%, 50%, 0.2);
}

body {
    font-size: 16px;
    font-family: 'San Francisco Regular';
    margin: 0;
    padding: 0;
    border-radius: none;
}


.window {
    position: relative;
    display: flex;
    flex: 1;
    height: 100vh;
    justify-content: space-between;
    flex-direction: column;
    padding: 15px 15px 15px 15px;
    box-sizing: border-box;
}

.language-container {
    position: absolute;
    top: 15px;
    left: 15px;
}

.title {
    font-size: .6em;
    text-transform: uppercase;
    color: #898E93;
    text-align: center;
}

.clipboardText {
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    color: #646B73;
    font-size: 1.1em;
    padding-left: 20px;
    padding-right: 20px;
    white-space: pre-line;
    word-break: break-all;
}

.options {
    border-top: 1px solid #D8D8D8;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    font-size: 1.1em;
    padding-top: .8rem;
}

.btn {
    cursor: pointer;
    font-size: .7em;
    text-align: center;
}

.btn:hover {
    color: #026CDD;
}

